--- a/Urban Dictionary/app/build.gradle
+++ b/Urban Dictionary/app/build.gradle
@@ -4,16 +4,22 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.apsoftware.myapplication"
+        applicationId "com.apsoftware.urbandictionary.myapplication"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    dataBinding{
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,6 +31,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+}
+kapt {
+    generateStubs = true
 }
 
 dependencies {
@@ -34,11 +45,21 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation "com.squareup.okhttp3:okhttp:3.11.0"
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+    implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.squareup.moshi:moshi:1.6.0'
+    kapt 'com.android.databinding:compiler:3.1.4'
+    implementation "com.google.dagger:dagger:2.20"
+    kapt "com.google.dagger:dagger-compiler:2.11"
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
+
 }
