--- a/Urban Dictionary/app/build.gradle
+++ b/Urban Dictionary/app/build.gradle
@@ -7,6 +7,9 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+    dataBinding{
+        enabled=true
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.apsoftware.myapplication"
@@ -43,8 +46,8 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.6.0'
     kapt 'com.android.databinding:compiler:3.1.4'
     implementation "com.google.dagger:dagger:2.20"
-    kapt "com.google.dagger:dagger-compiler:2.11"
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    kapt "com.google.dagger:dagger-compiler:2.16"
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
     compileOnly "org.glassfish:javax.annotation:3.1.1"
     implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
