--- a/Urban Dictionary/app/build.gradle
+++ b/Urban Dictionary/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
+    testImplementation "org.mockito:mockito-core:2.21.0"
+    testImplementation "org.robolectric:robolectric:3.8"
+    testImplementation "com.squareup.okhttp3:mockwebserver:3.11.0"
+    testImplementation "com.squareup.assertj:assertj-android:1.1.1"
+    testImplementation "androidx.test:core:1.1.0"
+    androidTestImplementation "androidx.test:runner:1.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
 }
